# dmailfi_gateway

./: Cargo.toml  DMail.tla  README.md
.devcontainer/: devcontainer.json
src/: main.rs
src/services/: mod.rs
src/services/mailer/: mod.rs
src/services/smtpd/: mod.rs
