[package]
name = "dmailfi_smtp_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
ic-agent = "0.33.0"
tokio-stream = "0.1.14"
email_address = "0.2.4"
tokio-rustls = "0.25.0"
clap = { version = "4.5.1", features = ["derive"] }
candid = "0.10"
dmailfi_types = { git = "https://github.com/Zedonboy/dmailfi_protocol.git", branch = "main"}
serde_bytes = "0.11.14"
trust-dns-resolver = "0.23.2"
lettre = "0.11.4"
